--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,46 @@
     "from collections import defaultdict\n",
     "from community import community_louvain\n",
     "from wordcloud import WordCloud\n",
-    "# import nltk\n",
+    "import ast\n",
+    "from functools import lru_cache\n",
     "# import nltk.book as book\n",
-    "\n",
+    "from nltk import PorterStemmer\n",
+    "import nltk\n",
+    "import re\n",
     "sns.set_theme(style=\"darkgrid\")\n",
-    "\n",
+    "from nltk.corpus import stopwords\n",
     "seed = 42\n",
     "np.random.seed(seed)\n",
     "random.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\juliu\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
    ]
   },
   {
@@ -889,12 +921,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "G_louvain_partitions = louvain_partitions(G)\n",
-    "# G_louvain_modularity = modularity(G, G_louvain_partitions)"
+    "# G_louvain_modularity = modularity(G, G_louvain_partitions)\n",
+    "# TODO: Store the partitions in a df with author degrees"
    ]
   },
   {
@@ -906,35 +939,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "abstracts_df = pd.read_csv(\"final_abstracts.csv\")\n",
-    "inverted_index = abstracts_df[\"abstract_inverted_index\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abstracts_df[\"abstract_inverted_index\"].apply(\n",
-    "    lambda d: \" \".join(word for word, indices in sorted(ast.literal_eval(d).items(), key=lambda x: min(x[1])) for _ in indices)\n",
+    "abstracts_df[\"abstract_inverted_index\"] = abstracts_df[\"abstract_inverted_index\"].apply(\n",
+    "    lambda x: ast.literal_eval(x) if pd.notna(x) else {}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def invert_to_text(inverted_index):\n",
+    "    if not inverted_index:\n",
+    "        return ''\n",
+    "    lenght = max(i for p in inverted_index.values() for i in p) + 1\n",
+    "    text = [''] * lenght\n",
+    "    for word, positions in inverted_index.items():\n",
+    "        for i in positions:\n",
+    "            text[i] = word\n",
+    "    return \" \".join(text)\n",
+    "\n",
+    "# Apply inverted_index function to df\n",
+    "abstracts_df[\"text\"] = abstracts_df[\"abstract_inverted_index\"].apply(invert_to_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = PorterStemmer()\n",
+    "pattern = re.compile(r'https?://\\S+|[^a-z\\s]')\n",
+    "stop_words = stopwords.words('english')\n",
+    "\n",
+    "@lru_cache(maxsize=10000)\n",
+    "def cached_stem(word):\n",
+    "    return stemmer.stem(word)\n",
+    "\n",
+    "def tokenize(text, stem=True):\n",
+    "    text = text.lower()\n",
+    "    text = pattern.sub('', text)\n",
+    "    tokens = text.split()\n",
+    "    tokens = [token for token in tokens if token not in stop_words]\n",
+    "    return [stemmer.stem(t) for t in tokens] if stem else tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO - skriv om stemming of tokenize strategi\n",
+    "\n",
+    "\n",
+    "    Revisit Chapter 3 if you're unfamiliar with tokenization.\n",
+    "    Exclude punctuation, URLs, mathematical symbols, and numbers.\n",
+    "    Convert all text to lowercase.\n",
+    "    Optional: Consider using stemming.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inverted_to_text(inverted_index):\n",
-    "    \n",
-    "    return text"
+    "abstracts_df[\"tokens\"] = abstracts_df[\"text\"].apply(tokenize)\n",
+    "tokens = abstracts_df[\"tokens\"].explode()\n",
+    "len(tokens)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
