🎋 Fixes live share merge

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -867,7 +867,7 @@
     "\n",
     "karate_louvain_partitions = louvain_partitions(G_karate)\n",
     "karate_louvain_modularity = modularity(G_karate, karate_louvain_partitions)\n",
-    "print(f\"The modularity is {karate_louvain_modularity}\") with() {}len()karate_louvain_partitions partitions"
+    "print(f\"The modularity is {karate_louvain_modularity}  with {len(karate_louvain_partitions)}\")"
    ]
   },
   {
