Adds code for bigramming

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,11 @@
     "from wordcloud import WordCloud\n",
     "import ast\n",
     "from functools import lru_cache\n",
+    "from collections import Counter\n",
+    "from scipy.stats import chi2\n",
+    "from nltk.tokenize import MWETokenizer\n",
     "# import nltk.book as book\n",
-    "from nltk import PorterStemmer\n",
+    "from nltk import PorterStemmer, bigrams as nltk_bigrams\n",
     "import nltk\n",
     "import re\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -116,20 +119,6 @@
      "output_type": "stream",
      "text": [
       "Number of nodes: 14139, Number of edges: 57661\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\juliu\\Miniconda3\\Lib\\site-packages\\networkx\\readwrite\\json_graph\\node_link.py:287: FutureWarning: \n",
-      "The default value will be changed to `edges=\"edges\" in NetworkX 3.6.\n",
-      "\n",
-      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
-      "\n",
-      "  nx.node_link_graph(data, edges=\"links\") to preserve current behavior, or\n",
-      "  nx.node_link_graph(data, edges=\"edges\") for forward compatibility.\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -846,14 +835,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The modularity is 0.5498027613412229\n"
+      "The modularity is 0.5498027613412229  with 4\n"
      ]
     }
    ],
@@ -921,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,12 +955,15 @@
     "    return \" \".join(text)\n",
     "\n",
     "# Apply inverted_index function to df\n",
-    "abstracts_df[\"text\"] = abstracts_df[\"abstract_inverted_index\"].apply(invert_to_text)"
+    "abstracts_df[\"text\"] = abstracts_df[\"abstract_inverted_index\"].apply(invert_to_text)\n",
+    "\n",
+    "# TODO Fix filtering of rows with no data\n",
+    "abstracts_df = abstracts_df[abstracts_df[\"text\"].apply(lambda x: len(x) > 0)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,32 +998,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abstracts_df[\"tokens\"] = abstracts_df[\"text\"].apply(tokenize)\n",
-    "tokens = abstracts_df[\"tokens\"].explode()\n",
-    "len(tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2962444"
+       "2954976"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "abstracts_df[\"tokens\"] = abstracts_df[\"text\"].apply(tokenize)\n",
+    "tokens = abstracts_df[\"tokens\"].explode()\n",
     "len(tokens)"
    ]
   },
@@ -1044,10 +1027,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "abstracts_df[\"bigrams\"] = abstracts_df[\"tokens\"].apply(lambda x: list(nltk_bigrams(x)))\n",
+    "\n",
+    "bigrams = abstracts_df[\"bigrams\"].dropna().explode().tolist()\n",
+    "\n",
+    "bigrams = [bg for bg in bigrams if not isinstance(bg, float)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_counter = Counter(bigrams)\n",
+    "first_counter = Counter((bg[0] for bg in bigrams))\n",
+    "second_counter = Counter((bg[1] for bg in bigrams))\n",
+    "N = len(bigrams)\n",
+    "\n",
+    "def chi_squared(bg):\n",
+    "    w1, w2 = bg\n",
+    "    nii = bigram_counter[bg]\n",
+    "    nio = first_counter[w1] - nii\n",
+    "    noi = second_counter[w2] - nii\n",
+    "    noo = N - (nii + nio + noi)\n",
+    "    \n",
+    "    R1 = first_counter[w1]\n",
+    "    C1 = second_counter[w2]\n",
+    "    R2 = noi + noo\n",
+    "    C2 = nio + noo\n",
+    "    \n",
+    "    E_ii = R1 * C1 / N\n",
+    "    E_io = R1 * C2 / N\n",
+    "    E_oi = R2 * C1 / N\n",
+    "    E_oo = R2 * C2 / N\n",
+    "    \n",
+    "    X_ii = (nii - E_ii)**2 / E_ii\n",
+    "    X_io = (nio - E_io)**2 / E_io\n",
+    "    X_oi = (noi - E_oi)**2 / E_oi\n",
+    "    X_oo = (noo - E_oo)**2 / E_oo\n",
+    "    \n",
+    "    return X_ii + X_io + X_oi + X_oo\n",
+    "\n",
+    "chi2vals = {bg: chi_squared(bg) for bg in bigram_counter}\n",
+    "pvals = {bg: chi2.sf(val, 1) for bg, val in chi2vals.items()}\n",
+    "collocs = {bg: cnt for bg, cnt in bigram_counter.items() if cnt > 50 and pvals[bg] < 0.001}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = MWETokenizer(list(collocs.keys()), separator=\"_\")\n",
+    "abstracts_df[\"tokens\"] = abstracts_df[\"tokens\"].apply(tokenizer.tokenize)\n",
+    "abstracts_df.to_csv(\"abstracts_with_tokens.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
