Adds community documents

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -1240,9 +1240,7 @@
     }
    ],
    "source": [
-    "abstracts_df[\"tokens\"] = abstracts_df[\"text\"].apply(tokenize)\n",
-    "tokens = abstracts_df[\"tokens\"].explode()\n",
-    "len(tokens)"
+    "abstracts_df[\"tokens\"] = abstracts_df[\"text\"].apply(tokenize)"
    ]
   },
   {
@@ -1305,6 +1303,17 @@
     "chi2vals = {bg: chi_squared(bg) for bg in bigram_counter}\n",
     "pvals = {bg: chi2.sf(val, 1) for bg, val in chi2vals.items()}\n",
     "collocs = {bg: cnt for bg, cnt in bigram_counter.items() if cnt > 50 and pvals[bg] < 0.001}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = MWETokenizer(list(collocs.keys()), separator=\"_\")\n",
+    "abstracts_df[\"tokens\"] = abstracts_df[\"tokens\"].apply(tokenizer.tokenize)\n",
+    "abstracts_df.to_csv(\"abstracts_with_tokens.csv\", index=False)"
    ]
   },
   {
@@ -1428,16 +1437,12 @@
        "4  ['abstract', 'one', 'wide_use', 'approach', 'q...  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer = MWETokenizer(list(collocs.keys()), separator=\"_\")\n",
-    "abstracts_df[\"tokens\"] = abstracts_df[\"tokens\"].apply(tokenizer.tokenize)\n",
-    "abstracts_df.to_csv(\"abstracts_with_tokens.csv\", index=False)\n",
-    "\n",
     "final_abstracts_df = pd.read_csv(\"abstracts_with_tokens.csv\")\n",
     "final_abstracts_df['author_ids'] = final_abstracts_df['author_ids'].apply(ast.literal_eval)\n",
     "final_abstracts_df.head()"
@@ -1490,37 +1495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id           community\n",
-       "W100905993   1.0          [['electron_health', 'record_ehr', 'contain', ...\n",
-       "W100956804   16.0         [['previou', 'attempt', 'symbol', 'represent',...\n",
-       "W1010989072  9.0          [['emerg', 'new', 'paradigm', 'comput', 'peert...\n",
-       "W1011950056  28.0         [['two', 'fundament', 'reason', 'firm', 'own',...\n",
-       "W1014429803  4.0          [['one', 'primari', 'use', 'graph', 'theori_so...\n",
-       "                                                ...                        \n",
-       "W99075841    12.0         [['paraphras', 'recognit', 'critic', 'step', '...\n",
-       "W9921517     8.0          [['design', 'human_comput', 'systm', 'often', ...\n",
-       "             35.0         [['design', 'human_comput', 'systm', 'often', ...\n",
-       "W995218198   9.0          [['mechan', 'emerg', 'evolut_cooper', 'popul',...\n",
-       "             26.0         [['mechan', 'emerg', 'evolut_cooper', 'popul',...\n",
-       "Name: tokens, Length: 33568, dtype: object"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exploded = final_abstracts_df.explode(\"author_ids\")\n",
-    "exploded[\"community\"] = exploded[\"author_ids\"].map(author_data.set_index(\"author\")[\"community\"])\n",
-    "# exploded.groupby(\"community\").agg({\"tokens\": list})\n",
-    "exploded.groupby([\"id\", \"community\"])[\"tokens\"].apply(lambda x: [token for token in x])"
+    "community_docs = final_abstracts_df.explode(\"author_ids\")\n",
+    "community_docs = community_docs.merge(author_data[[\"author\", \"community\"]], left_on=\"author_ids\", right_on=\"author\")\n",
+    "community_docs = community_docs.drop_duplicates(subset=[\"id\", \"community\"])\n",
+    "community_docs = community_docs.groupby(\"community\")[\"tokens\"].sum()"
    ]
   },
   {
